Create a working navigation drawer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.archer.watchlist">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,8 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,12 +22,8 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name=".services.MyIntentService"
-            android:exported="false"></service>
-        <service android:name=".services.OmdbIntentService" />
 
-        <receiver android:name=".MyBroadcastReceiver" />
+
     </application>
 
 </manifest>
