--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.android.support:design:28.0.0-rc02'
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+
 
 }
