improve orientation of stuff in the main view
just.. generally... make things work again?

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-7951269981636602~7182060027"/>
         <service android:name=".services.OmdbIntentService" />
 
         <activity
